--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
         <h2 class="section-header">The 'Aegis' IoT Wearable</h2>
         <div class="two-col-layout">
             <div style="text-align: center;">
-                 <img src="C:\Users\Basu\Downloads\Aegis.png" alt="Aegis IoT Wearable" class="iot-image">
+                 <img src="Aegis.png" alt="Aegis IoT Wearable" class="iot-image">
             </div>
             <div class="glass-card">
                  <h3 style="color: var(--primary-cyan); margin-bottom: 1rem;"><i class="fas fa-user-shield"></i> Your Personal Guardian</h3>
