--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,12 @@
     <!-- Floating Translator Chatbot -->
     <button id="translator-btn"><i class="fas fa-language"></i></button>
     <div id="translator-popup">
-        <iframe src="https://tanushka-lokegaonkar-translator.hf.space/?__theme=dark" title="Translator"></iframe>
+        <iframe
+        src="https://tanushka-lokegaonkar-audio-translator.hf.space"
+        frameborder="0"
+        allow="microphone; autoplay; camera"
+        sandbox="allow-scripts allow-same-origin allow-forms allow-popups"
+        ></iframe>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
